--- a/feature/src/main/res/navigation/nav_graph.xml
+++ b/feature/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.sopt.now.advanced.team2android.feature.presentation.splash.SplashFragment"
+        android:name="com.sopt.now.advanced.team2android.feature.ui.splash.SplashFragment"
         android:label="fragment_splash">
         <action
             android:id="@+id/action_splash_to_sign_in"
@@ -15,7 +15,7 @@
 
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.sopt.now.advanced.team2android.feature.presentation.signIn.SignInFragment"
+        android:name="com.sopt.now.advanced.team2android.feature.ui.signIn.SignInFragment"
         android:label="fragment_sign_in">
         <action
             android:id="@+id/action_sign_in_to_home"
@@ -27,7 +27,7 @@
 
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.sopt.now.advanced.team2android.feature.presentation.signUp.SignUpFragment"
+        android:name="com.sopt.now.advanced.team2android.feature.ui.signUp.SignUpFragment"
         android:label="fragment_sign_up">
         <action
             android:id="@+id/action_sign_up_to_home"
@@ -36,7 +36,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.sopt.now.advanced.team2android.feature.presentation.home.HomeFragment"
+        android:name="com.sopt.now.advanced.team2android.feature.ui.home.HomeFragment"
         android:label="fragment_home">
         <action
             android:id="@+id/action_home_to_search"
@@ -48,7 +48,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.sopt.now.advanced.team2android.feature.presentation.search.SearchFragment"
+        android:name="com.sopt.now.advanced.team2android.feature.ui.search.SearchFragment"
         android:label="fragment_search">
         <action
             android:id="@+id/action_search_to_home"
@@ -60,7 +60,7 @@
 
     <fragment
         android:id="@+id/myPageFragment"
-        android:name="com.sopt.now.advanced.team2android.feature.presentation.myPage.MyPageFragment"
+        android:name="com.sopt.now.advanced.team2android.feature.ui.myPage.MyPageFragment"
         android:label="fragment_my_page">
         <action
             android:id="@+id/action_main_to_sign_in"
