--- a/feature/src/main/res/layout/fragment_sign_up.xml
+++ b/feature/src/main/res/layout/fragment_sign_up.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Splash"
+        android:text="SignUp"
         android:textAppearance="@style/TextAppearance.Title1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
