--- a/core/src/main/res/values/themes.xml
+++ b/core/src/main/res/values/themes.xml
@@ -6,4 +6,21 @@
     </style>
 
     <style name="Theme.Team2Android" parent="Base.Theme.Team2Android" />
+
+    <!-- Button -->
+    <style name="Theme.Team2Android.Button" parent="Widget.Material3.Button">
+        <item name="android:height">@dimen/button_height</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:textColor">@color/gray_100</item>
+        <item name="android:textAppearance">@style/TextAppearance.Headline</item>
+        <item name="cornerRadius">@dimen/button_corner_radius</item>
+    </style>
+
+    <!-- Corner size -->
+    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
